@@ -5,7 +5,7 @@ using System.Runtime.InteropServices;
 // General Information about an assembly is controlled through the following 
 // set of attributes. Change these attribute values to modify the information
 // associated with an assembly.
-[assembly: AssemblyTitle("Force IP-Binder/ Tarsier GUI")]
+[assembly: AssemblyTitle("Force IP-Binder Tarsier GUI")]
 [assembly: AssemblyDescription("Binding other application to use a specific network interface / IP address.")]
 [assembly: AssemblyConfiguration("")]
 [assembly: AssemblyCompany("Tarsier Solutions")]
@@ -32,5 +32,5 @@ using System.Runtime.InteropServices;
 // You can specify all the values or you can default the Build and Revision Numbers 
 // by using the '*' as shown below:
 // [assembly: AssemblyVersion("1.0.*")]
-[assembly: AssemblyVersion("1.0.*")]
-[assembly: AssemblyFileVersion("1.0")]
+[assembly: AssemblyVersion("1.1.*")]
+[assembly: AssemblyFileVersion("1.1")]
